--- a/index.html
+++ b/index.html
@@ -573,7 +573,7 @@
             <div class="footer-content">
                 <div class="footer-section">
                     <h3>Contact Us</h3>
-                    <p>Email: info@akosproject.org</p>
+                    <p>Email: mak1095@nyu.edu</p>
                     <p>Phone: +1 (555) 123-4567</p>
                     <p>Address: 123 Community Way<br>Impact City, IC 12345</p>
                 </div>
