--- a/index.html
+++ b/index.html
@@ -461,11 +461,11 @@
     </style>
 </head>
 <body>
-        <header>
+    <header>
         <nav class="container">
             <div class="logo">
                 <img src="akos-logo.png" alt="AKOS Project Logo" class="logo-img">
-                <span>AKOS PROJECT</span>
+                <span>Empowering Communities Through Connection</span>
             </div>
             <ul class="nav-links">
                 <li><a href="#home">Home</a></li>
@@ -476,8 +476,6 @@
             </ul>
             <a href="#donate" class="donate-btn">Donate</a>
         </nav>
-    </header>
-    <header>
         <nav class="container">
             <div class="logo">AKOS PROJECT</div>
             <ul class="nav-links">
@@ -494,7 +492,7 @@
     <section id="home" class="hero">
         <div class="container">
             <div class="hero-content">
-                <h1>Empowering Communities Through Connection</h1>
+
                 <p>Building bridges of mentorship, health equity, and education across Ghana, the U.S., and beyond. Together, we create lasting change in underserved communities.</p>
                 <div class="cta-buttons">
                     <a href="#programs" class="btn btn-primary">Explore Our Programs</a>
