--- a/index.html
+++ b/index.html
@@ -465,7 +465,7 @@
         <nav class="container">
             <div class="logo">
                 <img src="akos-logo.png" alt="AKOS Project Logo" class="logo-img">
-                <span>Empowering Communities Through Connection</span>
+                <p>Empowering Communities Through Connection</p>
             </div>
             <ul class="nav-links">
                 <li><a href="#home">Home</a></li>
