--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
 
 
         .logo {
+            position: fixed;
             display: flex;
             align-items: center;
             gap: 0.5rem;
