--- a/index.html
+++ b/index.html
@@ -47,17 +47,31 @@
         .logo {
             display: flex;
             align-items: center;
-            gap: 0.5rem;
-            font-size: 1.5rem;
+            gap: 15px;
+        }
+
+        .logo img {
+            height: 50px;
+            width: auto;
+        }
+        
+        .logo-text {
+            display: flex;
+            flex-direction: column;
+            line-height: 1.2;
+        }
+
+        .logo-title {
+            font-size: 1.8rem;
             font-weight: bold;
             color: #2E8B57;
         }
 
-        .logo-img {
-            height: 40px;
-            width: auto;
+        .logo-subtitle {
+            font-size: 0.9rem;
+            color: #666;
+            font-weight: 500;
         }
-
 
         .nav-links {
             display: flex;
