--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         }
 
         .container {
-            max-width: 300px;
+            max-width: 3000px;
             margin: 0 auto;
             padding: 0 20px;
         }
@@ -51,7 +51,7 @@
         }
 
         .logo img {
-            height: auto;
+            height: 120px;
             width: auto;
         }
 
