--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
         .logo img {
             height: 120px;
-            width: auto;
+            object-fit: contain;
         }
 
         .logo-text {
